[package]
name = "gzip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.2.1"
hex = "0.4.3"
miniz_oxide = "0.7.1"
propane = { path = "../forks/propane" }
thiserror = "1.0.40"

[dev-dependencies]
flate2 = "1.0.26"
test-case = "3.1.0"
rand_chacha = "0.3.1"
anyhow = "1.0.75"
